<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="nanodegree.diegobaldi.it.tonightmovie.viewmodels.UserSettingsViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            style="@style/FeedButton.Show"
            android:id="@+id/change_picture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            app:layout_constraintTop_toTopOf="@+id/profile_picture"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_picture"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.444"
            app:layout_constraintRight_toLeftOf="@+id/profile_picture"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:viewAspectRatio="1"
            app:roundAsCircle="true"
            android:layout_gravity="center_horizontal"
            app:actualImageUrl="@{user.photoUrl}"
            android:id="@+id/profile_picture"
            app:failureImage="@drawable/profile_placeholder"
            app:failureImageScaleType="centerCrop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/change_picture_btn"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textInputLayout"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <EditText
                android:id="@+id/bio_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                android:text="@{user.bio}" />
        </android.support.design.widget.TextInputLayout>

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:checked="@{user.notifications}"
            android:text="@string/notifications"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textInputLayout2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@{user.displayName}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/notification_switch"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
