<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="newRequestViewModel" type="nanodegree.diegobaldi.it.tonightmovie.viewmodels.NewRequestViewModel"/>
    </data>
    <FrameLayout
        android:id="@+id/content_new_advice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"
        app:animatedCompletion="@{newRequestViewModel.requestSubmitted}"
        app:message="@{newRequestViewModel.message}">

        <FrameLayout
            android:id="@+id/success_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animation_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        app:lottie_fileName="check_pop.json"
                        app:lottie_loop="false"
                        app:lottie_autoPlay="true"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/feedback"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/request_ok_message"/>

                    <Button
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:text="@string/go_back"
                        android:onClick="@{newRequestViewModel.goBack()}"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/form_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        app:viewAspectRatio="0.66"
                        app:failureImage="@drawable/ic_no_image"
                        app:failureImageScaleType="centerInside"
                        android:contentDescription="@{newRequestViewModel.movieName}"
                        app:actualImageUrl="@{newRequestViewModel.posterPath}"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/layout_description">
                        <EditText android:id="@+id/input_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:text="@{newRequestViewModel.description}"
                            app:error="@{newRequestViewModel.descriptionError}"
                            app:addTextChangedListener="@{newRequestViewModel.descriptionWatcher}"
                            app:onFocusChangeListener="@{newRequestViewModel.descriptionFocusListener}"/>
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/genre_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:entries="@{newRequestViewModel.genres}"
                        android:selectedItemPosition="@={newRequestViewModel.genrePos}"/>


                    <Button
                        android:id="@+id/send_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/colorAccent"
                        android:textColor="@android:color/white"
                        android:text="@string/send"
                        android:onClick="@{newRequestViewModel.onClick()}"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </FrameLayout>







    </FrameLayout>
</layout>



