<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="requestDetailsViewModel" type="nanodegree.diegobaldi.it.tonightmovie.viewmodels.RequestDetailsViewModel"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context="nanodegree.diegobaldi.it.tonightmovie.views.RequestActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:viewAspectRatio="0.66"
                        app:failureImage="@drawable/ic_no_image"
                        app:failureImageScaleType="centerInside"
                        android:id="@+id/simpleDraweeView"
                        android:layout_weight="1"
                        android:contentDescription="@{requestDetailsViewModel.movieName}"
                        android:onClick="@{requestDetailsViewModel.onClickPoster()}"
                        app:actualImageUrl="@{requestDetailsViewModel.posterPath}" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:onClick="@{requestDetailsViewModel.onClickUserInfo()}"
                        android:orientation="vertical">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:viewAspectRatio="1"
                            app:roundAsCircle="true"
                            app:failureImage="@drawable/profile_placeholder"
                            app:failureImageScaleType="centerCrop"
                            android:contentDescription="@{requestDetailsViewModel.authorName}"
                            android:layout_gravity="center_horizontal"
                            app:actualImageUrl="@{requestDetailsViewModel.authorImage}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Title: 2000"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:gravity="center"
                            android:text="@{requestDetailsViewModel.authorName}"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/description"/>

                    <View
                        android:layout_width="@dimen/accent_divider_width"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent"
                        android:layout_marginTop="@dimen/activity_vertical_margin"/>

                    <TextView
                        android:id="@+id/synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:text="@{requestDetailsViewModel.description}">
                    </TextView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/requester_favorites_movies"
                        android:layout_marginTop="@dimen/activity_vertical_margin"/>

                    <View
                        android:layout_width="@dimen/accent_divider_width"
                        android:layout_height="1dp"
                        android:background="@color/colorAccent"
                        android:layout_marginTop="@dimen/activity_vertical_margin"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ProgressBar
                            android:id="@+id/favs_progress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:visibility="gone"
                            android:layout_margin="@dimen/activity_horizontal_margin"/>

                        <TextView
                            android:id="@+id/empty_favs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:visibility="gone"
                            android:text="@string/no_favorites"
                            android:gravity="center_horizontal"
                            android:layout_margin="@dimen/activity_horizontal_margin" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/favs_recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:layout_marginBottom="@dimen/activity_vertical_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginRight="@dimen/activity_horizontal_margin">
                        </android.support.v7.widget.RecyclerView>

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</layout>